// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Snapshots: Icons should match snapshot 1`] = `
[
  <View
    style={
      {
        "backgroundColor": "#E4E7EA",
        "flex": 1,
        "maxHeight": 48,
      }
    }
  >
    <View
      accessibilityLabel="private channel private channel ."
      accessibilityRole="header"
      accessible={true}
      style={
        [
          {
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "height": 36.9,
            "opacity": 1,
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={false}
        hitSlop={
          {
            "bottom": 5,
            "left": 5,
            "right": 5,
            "top": 5,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="room-header"
      />
    </View>
  </View>,
  <View
    style={
      {
        "backgroundColor": "#E4E7EA",
        "flex": 1,
        "maxHeight": 48,
      }
    }
  >
    <View
      accessibilityLabel="public channel public channel ."
      accessibilityRole="header"
      accessible={true}
      style={
        [
          {
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "height": 36.9,
            "opacity": 1,
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={false}
        hitSlop={
          {
            "bottom": 5,
            "left": 5,
            "right": 5,
            "top": 5,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="room-header"
      />
    </View>
  </View>,
  <View
    style={
      {
        "backgroundColor": "#E4E7EA",
        "flex": 1,
        "maxHeight": 48,
      }
    }
  >
    <View
      accessibilityLabel="Discussion discussion ."
      accessibilityRole="header"
      accessible={true}
      style={
        [
          {
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "height": 36.9,
            "opacity": 1,
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={false}
        hitSlop={
          {
            "bottom": 5,
            "left": 5,
            "right": 5,
            "top": 5,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="room-header"
      />
    </View>
  </View>,
  <View
    style={
      {
        "backgroundColor": "#E4E7EA",
        "flex": 1,
        "maxHeight": 48,
      }
    }
  >
    <View
      accessibilityLabel="Omnichannel omnichannel ."
      accessibilityRole="header"
      accessible={true}
      style={
        [
          {
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "height": 36.9,
            "opacity": 1,
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={false}
        hitSlop={
          {
            "bottom": 5,
            "left": 5,
            "right": 5,
            "top": 5,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="room-header"
      />
    </View>
  </View>,
  <View
    style={
      {
        "backgroundColor": "#E4E7EA",
        "flex": 1,
        "maxHeight": 48,
      }
    }
  >
    <View
      accessibilityLabel="private team private team ."
      accessibilityRole="header"
      accessible={true}
      style={
        [
          {
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "height": 36.9,
            "opacity": 1,
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={false}
        hitSlop={
          {
            "bottom": 5,
            "left": 5,
            "right": 5,
            "top": 5,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="room-header"
      />
    </View>
  </View>,
  <View
    style={
      {
        "backgroundColor": "#E4E7EA",
        "flex": 1,
        "maxHeight": 48,
      }
    }
  >
    <View
      accessibilityLabel="Team public team ."
      accessibilityRole="header"
      accessible={true}
      style={
        [
          {
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "height": 36.9,
            "opacity": 1,
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={false}
        hitSlop={
          {
            "bottom": 5,
            "left": 5,
            "right": 5,
            "top": 5,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="room-header"
      />
    </View>
  </View>,
  <View
    style={
      {
        "backgroundColor": "#E4E7EA",
        "flex": 1,
        "maxHeight": 48,
      }
    }
  >
    <View
      accessibilityLabel="Message group dm ."
      accessibilityRole="header"
      accessible={true}
      style={
        [
          {
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "height": 36.9,
            "opacity": 1,
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={false}
        hitSlop={
          {
            "bottom": 5,
            "left": 5,
            "right": 5,
            "top": 5,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="room-header"
      />
    </View>
  </View>,
  <View
    style={
      {
        "backgroundColor": "#E4E7EA",
        "flex": 1,
        "maxHeight": 48,
      }
    }
  >
    <View
      accessibilityLabel="private channel online dm ."
      accessibilityRole="header"
      accessible={true}
      style={
        [
          {
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "height": 36.9,
            "opacity": 1,
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={false}
        hitSlop={
          {
            "bottom": 5,
            "left": 5,
            "right": 5,
            "top": 5,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="room-header"
      />
    </View>
  </View>,
  <View
    style={
      {
        "backgroundColor": "#E4E7EA",
        "flex": 1,
        "maxHeight": 48,
      }
    }
  >
    <View
      accessibilityLabel="private channel away dm ."
      accessibilityRole="header"
      accessible={true}
      style={
        [
          {
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "height": 36.9,
            "opacity": 1,
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={false}
        hitSlop={
          {
            "bottom": 5,
            "left": 5,
            "right": 5,
            "top": 5,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="room-header"
      />
    </View>
  </View>,
  <View
    style={
      {
        "backgroundColor": "#E4E7EA",
        "flex": 1,
        "maxHeight": 48,
      }
    }
  >
    <View
      accessibilityLabel="private channel busy dm ."
      accessibilityRole="header"
      accessible={true}
      style={
        [
          {
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "height": 36.9,
            "opacity": 1,
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={false}
        hitSlop={
          {
            "bottom": 5,
            "left": 5,
            "right": 5,
            "top": 5,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="room-header"
      />
    </View>
  </View>,
  <View
    style={
      {
        "backgroundColor": "#E4E7EA",
        "flex": 1,
        "maxHeight": 48,
      }
    }
  >
    <View
      accessibilityLabel="private channel loading dm ."
      accessibilityRole="header"
      accessible={true}
      style={
        [
          {
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "height": 36.9,
            "opacity": 1,
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={false}
        hitSlop={
          {
            "bottom": 5,
            "left": 5,
            "right": 5,
            "top": 5,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="room-header"
      />
    </View>
  </View>,
  <View
    style={
      {
        "backgroundColor": "#E4E7EA",
        "flex": 1,
        "maxHeight": 48,
      }
    }
  >
    <View
      accessibilityLabel="private channel offline dm ."
      accessibilityRole="header"
      accessible={true}
      style={
        [
          {
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "height": 36.9,
            "opacity": 1,
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={false}
        hitSlop={
          {
            "bottom": 5,
            "left": 5,
            "right": 5,
            "top": 5,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="room-header"
      />
    </View>
  </View>,
  <View
    style={
      {
        "backgroundColor": "#E4E7EA",
        "flex": 1,
        "maxHeight": 48,
      }
    }
  >
    <View
      accessibilityLabel="private channel classified ."
      accessibilityRole="header"
      accessible={true}
      style={
        [
          {
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "height": 36.9,
            "opacity": 1,
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={false}
        hitSlop={
          {
            "bottom": 5,
            "left": 5,
            "right": 5,
            "top": 5,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="room-header"
      />
    </View>
  </View>,
  <View
    style={
      {
        "backgroundColor": "#E4E7EA",
        "flex": 1,
        "maxHeight": 48,
      }
    }
  >
    <View
      accessibilityLabel="private team classified ."
      accessibilityRole="header"
      accessible={true}
      style={
        [
          {
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "height": 36.9,
            "opacity": 1,
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={false}
        hitSlop={
          {
            "bottom": 5,
            "left": 5,
            "right": 5,
            "top": 5,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="room-header"
      />
    </View>
  </View>,
]
`;

exports[`Story Snapshots: Themes should match snapshot 1`] = `
[
  <View
    style={
      {
        "backgroundColor": "#E4E7EA",
        "flex": 1,
        "maxHeight": 48,
      }
    }
  >
    <View
      accessibilityLabel="private channel title subtitle."
      accessibilityRole="header"
      accessible={true}
      style={
        [
          {
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "height": 36.9,
            "opacity": 1,
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={false}
        hitSlop={
          {
            "bottom": 5,
            "left": 5,
            "right": 5,
            "top": 5,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="room-header"
      />
    </View>
  </View>,
  <View
    style={
      {
        "backgroundColor": "#2D3039",
        "flex": 1,
        "maxHeight": 48,
      }
    }
  >
    <View
      accessibilityLabel="private channel title subtitle."
      accessibilityRole="header"
      accessible={true}
      style={
        [
          {
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "height": 36.9,
            "opacity": 1,
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={false}
        hitSlop={
          {
            "bottom": 5,
            "left": 5,
            "right": 5,
            "top": 5,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="room-header"
      />
    </View>
  </View>,
  <View
    style={
      {
        "backgroundColor": "#16181a",
        "flex": 1,
        "maxHeight": 48,
      }
    }
  >
    <View
      accessibilityLabel="private channel title subtitle."
      accessibilityRole="header"
      accessible={true}
      style={
        [
          {
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "height": 36.9,
            "opacity": 1,
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={false}
        hitSlop={
          {
            "bottom": 5,
            "left": 5,
            "right": 5,
            "top": 5,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="room-header"
      />
    </View>
  </View>,
]
`;

exports[`Story Snapshots: Thread should match snapshot 1`] = `
[
  <View
    style={
      {
        "backgroundColor": "#E4E7EA",
        "flex": 1,
        "maxHeight": 48,
      }
    }
  >
    <View
      accessibilityLabel="private channel title parent title."
      accessibilityRole="header"
      accessible={true}
      style={
        [
          {
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "height": 36.9,
            "opacity": 1,
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={false}
        hitSlop={
          {
            "bottom": 5,
            "left": 5,
            "right": 5,
            "top": 5,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="room-header"
      />
    </View>
  </View>,
  <View
    style={
      {
        "backgroundColor": "#E4E7EA",
        "flex": 1,
        "maxHeight": 48,
      }
    }
  >
    <View
      accessibilityLabel="private channel markdown
preview
#3
4
5 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries."
      accessibilityRole="header"
      accessible={true}
      style={
        [
          {
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "height": 36.9,
            "opacity": 1,
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={false}
        hitSlop={
          {
            "bottom": 5,
            "left": 5,
            "right": 5,
            "top": 5,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="room-header"
      />
    </View>
  </View>,
]
`;

exports[`Story Snapshots: TitleSubtitle should match snapshot 1`] = `
[
  <View
    style={
      {
        "backgroundColor": "#E4E7EA",
        "flex": 1,
        "maxHeight": 48,
      }
    }
  >
    <View
      accessibilityLabel="private channel title ."
      accessibilityRole="header"
      accessible={true}
      style={
        [
          {
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "height": 36.9,
            "opacity": 1,
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={false}
        hitSlop={
          {
            "bottom": 5,
            "left": 5,
            "right": 5,
            "top": 5,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="room-header"
      />
    </View>
  </View>,
  <View
    style={
      {
        "backgroundColor": "#E4E7EA",
        "flex": 1,
        "maxHeight": 48,
      }
    }
  >
    <View
      accessibilityLabel="private channel Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries ."
      accessibilityRole="header"
      accessible={true}
      style={
        [
          {
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "height": 36.9,
            "opacity": 1,
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={false}
        hitSlop={
          {
            "bottom": 5,
            "left": 5,
            "right": 5,
            "top": 5,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="room-header"
      />
    </View>
  </View>,
  <View
    style={
      {
        "backgroundColor": "#E4E7EA",
        "flex": 1,
        "maxHeight": 48,
      }
    }
  >
    <View
      accessibilityLabel="private channel title subtitle."
      accessibilityRole="header"
      accessible={true}
      style={
        [
          {
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "height": 36.9,
            "opacity": 1,
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={false}
        hitSlop={
          {
            "bottom": 5,
            "left": 5,
            "right": 5,
            "top": 5,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="room-header"
      />
    </View>
  </View>,
  <View
    style={
      {
        "backgroundColor": "#E4E7EA",
        "flex": 1,
        "maxHeight": 48,
      }
    }
  >
    <View
      accessibilityLabel="private channel title Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries."
      accessibilityRole="header"
      accessible={true}
      style={
        [
          {
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "height": 36.9,
            "opacity": 1,
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={false}
        hitSlop={
          {
            "bottom": 5,
            "left": 5,
            "right": 5,
            "top": 5,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="room-header"
      />
    </View>
  </View>,
  <View
    style={
      {
        "backgroundColor": "#E4E7EA",
        "flex": 1,
        "maxHeight": 48,
      }
    }
  >
    <View
      accessibilityLabel="private channel Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries."
      accessibilityRole="header"
      accessible={true}
      style={
        [
          {
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "height": 36.9,
            "opacity": 1,
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={false}
        hitSlop={
          {
            "bottom": 5,
            "left": 5,
            "right": 5,
            "top": 5,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="room-header"
      />
    </View>
  </View>,
]
`;

exports[`Story Snapshots: Typing should match snapshot 1`] = `
[
  <View
    style={
      {
        "backgroundColor": "#E4E7EA",
        "flex": 1,
        "maxHeight": 48,
      }
    }
  >
    <View
      accessibilityLabel="private channel title ."
      accessibilityRole="header"
      accessible={true}
      style={
        [
          {
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "height": 36.9,
            "opacity": 1,
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={false}
        hitSlop={
          {
            "bottom": 5,
            "left": 5,
            "right": 5,
            "top": 5,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="room-header"
      />
    </View>
  </View>,
  <View
    style={
      {
        "backgroundColor": "#E4E7EA",
        "flex": 1,
        "maxHeight": 48,
      }
    }
  >
    <View
      accessibilityLabel="private channel title ."
      accessibilityRole="header"
      accessible={true}
      style={
        [
          {
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "height": 36.9,
            "opacity": 1,
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={false}
        hitSlop={
          {
            "bottom": 5,
            "left": 5,
            "right": 5,
            "top": 5,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="room-header"
      />
    </View>
  </View>,
  <View
    style={
      {
        "backgroundColor": "#E4E7EA",
        "flex": 1,
        "maxHeight": 48,
      }
    }
  >
    <View
      accessibilityLabel="private channel title ."
      accessibilityRole="header"
      accessible={true}
      style={
        [
          {
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "height": 36.9,
            "opacity": 1,
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={false}
        hitSlop={
          {
            "bottom": 5,
            "left": 5,
            "right": 5,
            "top": 5,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="room-header"
      />
    </View>
  </View>,
]
`;
